nats-micro/tests/ui/service_missing_name.stderr
error: Missing field `name`
 --> tests/ui/service_missing_name.rs:3:1
  |
3 | #[service(version = "1.0.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `service` (in Nightly builds, run with -Z macro-backtrace for more info)
