nats-micro/tests/ui/service_missing_name.rs
use nats_micro::service;

#[service(version = "1.0.0")]
struct MissingNameService;

fn main() {}
